--- a/ders12/x-cloak-kullanimi.html
+++ b/ders12/x-cloak-kullanimi.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>x-spread Kullanımı</title>
+    <title>x-cloak Kullanımı</title>
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.3.5/dist/alpine.min.js" defer></script>
+    <style>
+        [x-cloak] {color: red}
+    </style>
 </head>
 <body>
-   <div x-data="{'status': true}">
-        <span x-bind:class="{'red': status}">
-            oğuzhan
-        </span>
-   </div>
+    <div x-data='{}' x-cloak>
+        deneme
+    </div>
 </body>
 </html>
